--- a/module2/style.css
+++ b/module2/style.css
@@ -4,10 +4,26 @@ body {
     background-color: #f0f0f0; /* Warna latar belakang laman web */
     color: #333333; /* Warna teks */ 
 }
-h1 {
-    color: #00a800; /* Warna tajuk (header)*/
-    font-size: 24px; /* Ukuran font tajuk (header) */
-    font-family: Georgia, serif; /* Keluarga font yang digunakan di tajuk (header) */
+
+@keyframes color-change {
+    0% {
+      color: blue;
+      font-size: 50px;
+    }
+  
+    50% {
+      color: red;
+      font-size: 100px;
+    }
+  
+    100% {
+      color: blue;
+      font-size: 50px;
+    }
+}
+
+h1:hover {
+    animation: color-change 3s infinite;
 }
 
 h2 {
