template and mesin template

--- a/python-pro-m3/Calculator---ind-main/templates/electronics.html
+++ b/python-pro-m3/Calculator---ind-main/templates/electronics.html
@@ -23,19 +23,24 @@
     <ul class="list" id="list">
       <!-- Tugas #3 -->
       <li class="list__item">
-        <a href="{{Set the route}}">
+        <a href={{size + lights + "/3"}}>
           <img class="item__img" src="../static/img/battery.svg" alt="battery">
           <span>3-5 perangkat</span></a>
       </li>
       <li class="list__item">
-        <a href="{{Mengatur rute}}">
+        <a href={{size + lights + "/7"}}>
           <img class="item__img" src="../static/img/battery.svg" alt="battery">
           <span>6-8 perangkat</span></a>
       </li>
       <li class="list__item">
-        <a href="{{Mengatur rute}}">
+        <a href={{size + lights + "/10"}}>
           <img class="item__img" src="../static/img/battery.svg" alt="battery">
           <span>10+ perangkat</span></a>
+      </li>
+      <li class="list__item">
+        <a href={{size + lights + "/10"}}>
+          <img class="item__img" src="../static/img/home.svg" alt="planet">
+          <span>Perancangan alat yang ramah lingkungan</span></a>
       </li>
       <!--  -->
     </ul>
