--- a/python-pro-m3/Calculator---ind-main/templates/index.html
+++ b/python-pro-m3/Calculator---ind-main/templates/index.html
@@ -30,12 +30,12 @@
       <li class="list__item">
         <a href="/2">
         <img class="item__img" src="../static/img/home.svg" alt="home">
-        <span><!--Tambahkan teks untuk opsi rumah berukuran sedang--></span></a>
+        <span>Rumah sedang</span></a>
       </li>
       <li class="list__item">
         <a href="/3">
         <img class="item__img" src="../static/img/home.svg" alt="home">
-        <span><!--Tambahkan teks untuk opsi rumah besar--></span></a>
+        <span>Rumah besar</span></a>
       <!--  -->
       </li>
     </ul>
