--- a/python-pro-m3/Calculator---ind-main/templates/lights.html
+++ b/python-pro-m3/Calculator---ind-main/templates/lights.html
@@ -28,12 +28,12 @@
       </li>
       <!--Tugas #2 -->
       <li class="list__item">
-        <a href="{{Set a route with the coefficient of 7}}"> 
+        <a href={{size + "/7"}}>
           <img class="item__img" src="../static/img/light.svg" alt="light">
           <span>4-6 lampu</span></a>
       </li>
       <li class="list__item">
-        <a href="{{Set the route with the coefficient of 10}}">
+        <a href="{{size + "/10"}}">
           <img class="item__img" src="../static/img/light.svg" alt="light">
           <span>8+ lampu</span></a>
       </li>
